--- a/.github/workflows/java-ci.yml
+++ b/.github/workflows/java-ci.yml
@@ -12,8 +12,8 @@ jobs:
             java:
                - 11
             os:
-#               - ubuntu
-               - windows
+               - ubuntu
+#               - windows
       steps:
          -  name: Checkout
             uses: actions/checkout@v2
@@ -37,7 +37,7 @@ jobs:
          -  name: Build with Gradle
             run: ./gradlew --info test
          -  name: Deploy to Maven Central
-            if: matrix.os == 'windows' && matrix.java == 11 && startsWith(github.ref, 'refs/tags/v')
+            if: matrix.os == 'ubuntu' && matrix.java == 11 && startsWith(github.ref, 'refs/tags/v')
             run: |
                echo '${{ secrets.SIGNING_KEY }}' | base64 -d > /tmp/signing_key.gpg
                ./gradlew \
