--- a/test/src/test/java/uks/debuggen/medical/marburgexpertsystem/classModel.yaml
+++ b/test/src/test/java/uks/debuggen/medical/marburgexpertsystem/classModel.yaml
@@ -141,6 +141,7 @@
             Event event = (Event) obj;
             eventQueue.put(event);
          }
+         System.err.println(\"Test has completed subscribeAndLoadOldEvents\");
       } catch (Exception e) {
          e.printStackTrace();
       }"
